syntax = "proto3";

package proto;

option go_package = "stetpb";

message Person{
    string id = 1;
    string name = 2;
}

message CreatePersonRequest{
    Person person = 1;
}

message CreatePersonResponse{
    Person person = 1; //with id
}
message ReadPersonRequest{
    string person_id = 1;
}
message ReadPersonResponse{
    Person person = 1;
}
message UpdatePersonRequest{
    Person person = 1;
}
message UpdatePersonResponse{
    Person person = 1;
}
message DeletePersonRequest{
    string person_id = 1;
}
message DeletePersonResponse{
    string person_id = 1;
}
service StetService{
    rpc CreatePerson (CreatePersonRequest) returns (CreatePersonResponse);
    rpc ReadPerson(ReadPersonRequest) returns (ReadPersonResponse); //returns NOT_FOUND if not found
    rpc UpdatePerson(UpdatePersonRequest) returns (UpdatePersonResponse); //returns NOT_FOUND if not found
    rpc DeletePerson(DeletePersonRequest) returns (DeletePersonResponse); //returns NOT_FOUND if not found
}